Changelog for Poi
=================

    (name of developer listed in brackets)

Poi 1.2 - (Unreleased)
----------------------

- Made PoiTracker translatable with LinguaPlone.  Does not make sense
  for the other content types.  (Change merged from 1.1)
  Fixes http://plone.org/products/poi/issues/177
  [maurits]


Poi 1.2 alpha 1 - (17 June 2008)
--------------------------------

- Handle target release better -- there was some confusion between
  values and labels.  [maurits]

- Made sure that just an issue state change or an attachment upload
  is also accepted as a change.  [maurits]

- Only show the target release option when there is more than one
  option (as None is always an option).  [maurits]

- Adapted the tests to use new style responses everywhere, except in
  the tests for migrating from old to new style responses.

- Made Poi migrations available with a form at migrate-poi.html.
  [maurits]

- Removed skins/Poi/poi_response_update_issue.cpy and related code.
  [maurits]

- Add i18n to browser/response.pt  [maurits]

- Removed button for adding old style response to issue.  [maurits]

- Removed skins/Poi/determineResponseType.py  [maurits]

- Send email when response is added.  [maurits]

- Update SearchableText of issue when response is added.  [maurits]

- Add handling for the target releases field (available only when
  using the PSC tracker).  [maurits]

- Only show options like changing state when the user has permission
  to use them.  [maurits]

- Allow adding and downloading an attachment in a response.  [maurits]

- Store rendered html on the response; remove that after editing.
  Makes views faster.  Basically a memoize variant. [maurits]

- In the creation view, test that a response is valid before adding
  it. [maurits]

- Let unit tests pass on Plone 3.1 by providing an IWorkflowChain
  adapter. [maurits]

- Add migration step for making sure that the Description of all
  PoiIssues in the portal_catalog is of type unicode instead of